# word-count

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/batch/: cli.rs  cn.rs  en.rs  mod.rs
src/batch/lang/: cn.rs  en.rs
