[package]
name = "world-count"
version = "0.1.0"
authors = ["hzqd <hzqelf@yeah.net>"]
edition = "2018"
description = "Word Frequency Statistics"
repository = "https://github.com/hzqd/word-count"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoko = "0.2"
itertools = "0.10"