[package]
name = "world-count"
version = "0.1.1"
authors = ["hzqd <hzqelf@yeah.net>"]
edition = "2018"
description = "Word Frequency Statistics"
repository = "https://github.com/hzqd/word-count"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoko = "0.2"
clap = "3.0.0-beta.5"
itertools = "0.10"